# ai-choose-your-own-adventure

./: .gitignore  README.md  build.sh  chatgpt.py  handlers.py  lambda_function.py  pyproject.toml  requirements.txt
endpoint_lambda/: README.md  build.sh  lambda_function.py  pyproject.toml
examples/: comment.json
handler_lambda/: README.md  build.sh  lambda_function.py  pyproject.toml
handler_lambda/src/: enums.py  facebook.py  handlers.py  openai.py
src/: chatgpt.py  facebook.py  handlers.py
test/: test.py
