[tool.poetry]
name = "ai-choose-your-own-adventure-endpoint"
version = "0.1.0"
description = "AI Choose Your Own Adventure - Endpoint"
authors = ["Adam Byer <semisweetsoftware@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
