[tool.poetry]
name = "ai-choose-your-own-adventure-handler"
version = "0.1.0"
description = "AI Choose Your Own Adventure - Handler"
authors = ["Adam Byer <semisweetsoftware@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.5"
requests = "^2.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
